--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,9 @@
 }
 
 body {
-  background: #08233b;
+/* background: #08233b; */
+
+  background: #98faf2;
   color: white;
   overscroll-behavior: none;
 
