--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 body {
 /* background: #08233b; */
 
-  background: #1a0810;
+  background: #320d1c;
   color: white;
   overscroll-behavior: none;
 
