--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,8 @@
 body {
 /* background: #08233b; */
 
+  background-img: url("https://img.freepik.com/free-photo/beautiful-shot-waterfall-forest_181624-27884.jpg?uid=R184723252&ga=GA1.1.1442796167.1737971133&semt=ais_hybrid")
+
   background: #320d1c;
   color: white;
   overscroll-behavior: none;
