--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@
 body {
 /* background: #08233b; */
 
-  background-img: url("../app/beautiful-shot-waterfall-forest.jpg")
-
+  background-image: url("../app/beautiful-shot-waterfall-forest.jpg")
+/* background: #320d1c; */
 
   color: white;
   overscroll-behavior: none;
