--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  background-image: url("../app/beautiful-shot-waterfall-forest.jpg");
+/*   background-image: url("../app/beautiful-shot-waterfall-forest.jpg"); */
+  background-image: url("../app/purple-grunge-distressed-cracked-texture_1409-2937.jpg");
   color: white;
   overscroll-behavior: none;
 }
