--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 
 body {
 /*   background-image: url("../app/beautiful-shot-waterfall-forest.jpg"); */
-  background-image: url("../app/purple-grunge-distressed-cracked-texture_1409-2937.jpg");
+  background-image: url("../app/ok.avif");
   color: white;
   overscroll-behavior: none;
 }
