--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 
 body {
 /*   background-image: url("../app/beautiful-shot-waterfall-forest.jpg"); */
-  background-image: url("../app/ok.avif");
+  background-image: url("../app/photo-1638864616275-9f0b291a2eb6.jpg");
   color: white;
   overscroll-behavior: none;
 }
